--- a/hero.css
+++ b/hero.css
@@ -60,6 +60,7 @@ img {
   font-size: 2.5rem;
   font-weight: 700;
   font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
+  background-color: #f2711c;
 }
 
 #about {
@@ -72,11 +73,28 @@ img {
   font-size: 1.5rem;
   font-weight: 500;
   font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
+  background-color: black;
+  color: white;
+  padding: 5px;
 }
 
 #powerstats,
 #biography {
   width: 50%;
   height: 100%;
+  margin-top: 10px;
   text-align: center;
+}
+
+#about-bio,
+#about-power {
+  margin-top: 20%;
+  text-align: left;
+}
+
+li {
+  margin-bottom: 10px;
+  font-size: 0.9rem;
+  font-weight: 400;
+  font-family: monospace;
 }
